<resources>
    <string name="app_name">Dialog</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="login_info">We will send you a code to verify your phone number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="next">Next</string>
    <string name="login_privacy_message">By continuing, you\'re agreeing to our\n<a href="#">Terms Of Service</a> &amp; <a href="#">Privacy Policy</a></string>
    <string name="code_info">We have sent a verification code to your number</string>
    <string name="enter_code_sent_to_phone_number">Enter the OTP sent to\n%s</string>
    <string name="did_not_receive_code">Didn\'t receive code?</string>
    <string name="resend_code">Resend code</string>
    <string name="please_enter_the_code_sent">Please enter the code sent</string>
    <string name="please_enter_a_valid_phone_number">Please enter a valid phone number</string>
    <string name="sms_quota_exceeded">Sorry your SMS quota is exceeded, please try again later</string>
    <string name="invalid_code_entered">Invalid code entered</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="try_again">Try again</string>
    <string name="code_verification">Code verification</string>
    <string name="please_wait">Please wait</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="chat_time_format">%s, %s</string>
    <string name="today">Today</string>
    <string name="add_friends">Add friends</string>
    <string name="friend_name">%s %s</string>
    <string name="expand">Expand</string>
    <string name="add">Add</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="sorry_something_went_wrong_please_try_again">Sorry something went wrong please try again</string>
    <string name="channel_id">Channel id</string>
    <string name="chanel_support_char" translatable="false">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890 !#$%()+-:;&lt;=.>?@[]^_{}|~,&amp;</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="allow_app_permissions_snack_bar">Please allow %s to continue</string>
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>
    <string name="allow_permissions">Allow permissions</string>
    <string name="permissions_request_info">Please enable all the requested permissions to use all features of the app.</string>
    <string name="allow">Allow</string>
    <string name="add_a_profile_photo">Add profile photo</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="would_you_like_to_cancel">Would you like to cancel?</string>
    <string name="cancel">Cancel</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="not_valid_last_name">Invalid last name</string>
    <string name="not_valid_first_name">Invalid first name</string>
    <string name="register">Register</string>
    <string name="chats">Chats</string>
    <string name="chat_requests">Chat Requests</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="search_friends_hint">Search friends</string>
    <string name="avatar">Avatar</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="manage_chats">Manage chats</string>
    <string name="help_info">Contact us for more assistance</string>
    <string name="help">Help</string>
    <string name="refer_and_earn">Refer &amp; Earn</string>
    <string name="refer_and_earn_info">Refer your friends to download the app and earn</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_info">Manage alerts for chats</string>
    <string name="sign_out">Sign Out</string>

</resources>
