<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/edit_height"
        android:contentDescription="@string/back"
        android:id="@+id/back"
        android:src="@drawable/left_96px"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Theme.Dialog.FontBold"
        android:id="@+id/title"
        android:textColor="@color/black"
        tools:text="@string/app_name"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:id="@+id/action_text"
        android:textSize="16sp"
        style="@style/Theme.Dialog.FontBold"
        tools:text="@string/skip"
        android:visibility="gone"
        tools:visibility="visible"
        android:padding="12dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
