<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="fragments.login.LoginFragment">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lg_phone_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:isScrollContainer="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">
        
        <TextView
            android:id="@+id/lg_title"
            style="@style/Theme.Dialog.FontBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_info"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <TextView
            android:id="@+id/lg_sub_title"
            style="@style/Theme.Dialog.FontMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/enter_your_phone_number"
            android:textAlignment="center"
            android:textColor="@color/colorDarkGray"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lg_title" />
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lg_phone_edit_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lg_sub_title">
    
            <com.hbb20.CountryCodePicker
                android:id="@+id/lg_country_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:paddingTop="4dp"
                android:textAlignment="center"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFullName="true"
                app:ccp_textSize="18sp"
                app:ccp_useFlagEmoji="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            
            <View
                android:id="@+id/lg_sep"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:background="@color/colorGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lg_country_code" />
    
            <EditText
                android:id="@+id/lg_phone_edit"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_height"
                android:autofillHints="phone"
                android:background="@android:color/transparent"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/colorDarkGray"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lg_sep" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        
        <TextView
            android:id="@+id/lg_phone_err_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lg_phone_edit_box"
            tools:text="You've entered an invalid phone number"
            tools:visibility="visible" />
    
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_privacy_message"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lg_phone_err_txt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lg_code_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:isScrollContainer="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">
        
        <TextView
            android:id="@+id/lg_code_title"
            style="@style/Theme.Dialog.FontBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/code_info"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <TextView
            android:id="@+id/lg_code_sub_title"
            style="@style/Theme.Dialog.FontMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/enter_code_sent_to_phone_number"
            android:textAlignment="center"
            android:textColor="@color/colorDarkGray"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lg_code_title" />
        
        <ui.PinView
            android:id="@+id/lg_code_edit"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_height"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lg_code_sub_title"
            app:pCount="6"
            app:pGap="4dp"
            app:pTextColor="@color/black"
            app:pTextSize="18sp" />
    
    
        <TextView
            android:id="@+id/lg_code_err_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lg_code_edit"
            tools:text="You've entered an invalid phone number"
            tools:visibility="visible" />
    
        <TextView
            android:id="@+id/lg_code_nt_r"
            style="@style/Theme.Dialog.FontMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/did_not_receive_code"
            android:textAlignment="center"
            android:textColor="@color/colorDarkGray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lg_code_err_txt" />
        
        <TextView
            android:id="@+id/lg_resend"
            style="@style/Theme.Dialog.FontBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/resend_code"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lg_code_nt_r" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/lg_next_btn"
        style="@style/Theme.Dialog.FontBold"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_height"
        android:background="@drawable/edit_background"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline2" />
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>
