<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChatActivity"
    tools:showIn="@layout/activity_chat"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/ct_guest_video_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:isScrollContainer="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_editor_box">
    
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />
        
    </RelativeLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_editor_box"
        android:paddingTop="12dp"
        android:background="@drawable/top_shadow_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:id="@+id/edit_add_file"
            android:src="@drawable/happy_96px"
            android:padding="4dp"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/edit_send"
            app:layout_constraintTop_toTopOf="@id/edit_send"
            android:contentDescription="@string/add" />
        
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text"
            android:hint="@string/enter_message"
            android:maxLength="200"
            android:maxLines="5"
            android:layout_marginHorizontal="8dp"
            android:inputType="textAutoCorrect|textAutoComplete|textMultiLine"
            android:imeActionLabel="@string/send"
            android:background="@android:color/transparent"
            android:paddingVertical="4dp"
            android:layout_marginBottom="12dp"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorGray"
            app:layout_constraintStart_toEndOf="@id/edit_add_file"
            app:layout_constraintEnd_toStartOf="@id/edit_sep"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:autofillHints="@null" />
        
        <View
            android:layout_width="0.5dp"
            android:layout_height="0dp"
            android:background="@color/colorGray"
            android:id="@+id/edit_sep"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="4dp"
            app:layout_constraintEnd_toStartOf="@id/edit_send"
            app:layout_constraintTop_toTopOf="@id/edit_send"
            app:layout_constraintBottom_toBottomOf="@id/edit_send"/>
    
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:id="@+id/edit_send"
            android:src="@drawable/sent_96px"
            android:padding="4dp"
            app:tint="@color/colorGray"
            android:contentDescription="@string/send"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/ct_local_video_box"
        android:layout_margin="16dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="1dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:cardBackgroundColor="@color/colorGrayLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
